// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntityGenerator generate entities from schema [mssql]: mssql-entity-dump 1`] = `
[
  "import { Entity, OneToOne, PrimaryKeyProp, Property } from '@mikro-orm/core';
import { Author2 } from './Author2';

@Entity({ comment: 'This is address table' })
export class Address2 {

  [PrimaryKeyProp]?: 'author';

  @OneToOne({ entity: () => Author2, updateRule: 'cascade', deleteRule: 'cascade', primary: true })
  author!: Author2;

  @Property({ comment: 'This is address property' })
  value!: string;

}
",
  "import { Collection, Entity, Index, ManyToMany, ManyToOne, type Opt, PrimaryKey, Property, Unique } from '@mikro-orm/core';
import { Book2 } from './Book2';

@Entity()
@Index({ name: 'author2_name_age_index', properties: ['name', 'age'] })
@Unique({ name: 'author2_name_email_unique', properties: ['name', 'email'] })
export class Author2 {

  @PrimaryKey()
  id!: number;

  @Property({ type: 'datetime', length: 3, defaultRaw: \`current_timestamp\` })
  createdAt!: Date & Opt;

  @Property({ type: 'datetime', length: 3, defaultRaw: \`current_timestamp\` })
  updatedAt!: Date & Opt;

  @Property({ index: 'custom_idx_name_123' })
  name!: string;

  @Property({ index: 'custom_email_index_name', unique: 'custom_email_unique_name' })
  email!: string;

  @Property({ nullable: true })
  age?: number;

  @Property({ type: 'boolean', defaultRaw: \`0\`, index: true })
  termsAccepted: boolean & Opt = false;

  @Property({ nullable: true })
  optional?: boolean;

  @Property({ type: 'text', nullable: true })
  identities?: string;

  @Property({ type: 'date', nullable: true, index: true })
  born?: string;

  @Property({ type: 'time', nullable: true, index: 'born_time_idx' })
  bornTime?: string;

  @ManyToOne({ entity: () => Book2, deleteRule: 'cascade', nullable: true })
  favouriteBook?: Book2;

  @ManyToOne({ entity: () => Author2, nullable: true })
  favouriteAuthor?: Author2;

  @ManyToMany({ entity: () => Author2, pivotTable: 'author_to_friend', joinColumn: 'author2_1_id', inverseJoinColumn: 'author2_2_id' })
  authorToFriend = new Collection<Author2>(this);

  @ManyToMany({ entity: () => Author2, joinColumn: 'author2_1_id', inverseJoinColumn: 'author2_2_id' })
  following = new Collection<Author2>(this);

}
",
  "import { Entity, Enum, ManyToOne, OneToOne, PrimaryKey, Property, Unique } from '@mikro-orm/core';

@Entity()
export class BaseUser2 {

  @PrimaryKey()
  id!: number;

  @Property({ length: 100 })
  firstName!: string;

  @Property({ length: 100 })
  lastName!: string;

  @Enum({ items: () => BaseUser2Type, index: true })
  type!: BaseUser2Type;

  @Property({ nullable: true })
  ownerProp?: string;

  @ManyToOne({ entity: () => BaseUser2, nullable: true })
  favouriteEmployee?: BaseUser2;

  @Unique({ name: 'base_user2_favourite_manager_id_unique', expression: 'create unique index [base_user2_favourite_manager_id_unique] on [base_user2] (where ([favourite_manager_id] IS NOT NULL))' })
  @OneToOne({ entity: () => BaseUser2, nullable: true })
  favouriteManager?: BaseUser2;

  @Property({ nullable: true })
  employeeProp?: number;

  @Property({ nullable: true })
  managerProp?: string;

}

export enum BaseUser2Type {
  EMPLOYEE = 'employee',
  MANAGER = 'manager',
  OWNER = 'owner',
}
",
  "import { Entity, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class BookTag2 {

  @PrimaryKey()
  id!: bigint;

  @Property({ length: 50 })
  name!: string;

}
",
  "import { Collection, Entity, ManyToMany, ManyToOne, type Opt, PrimaryKey, PrimaryKeyProp, Property, Unique } from '@mikro-orm/core';
import { Author2 } from './Author2';
import { BookTag2 } from './BookTag2';
import { Publisher2 } from './Publisher2';

@Entity()
export class Book2 {

  [PrimaryKeyProp]?: 'uuidPk';

  @PrimaryKey({ type: 'uuid' })
  uuidPk!: string;

  @Property({ type: 'datetime', length: 3, defaultRaw: \`current_timestamp\` })
  createdAt!: Date & Opt;

  @Unique({ name: 'book2_isbn_unique', expression: 'create unique index [book2_isbn_unique] on [book2] (where ([isbn] IS NOT NULL))' })
  @Property({ type: 'character', length: 13, nullable: true })
  isbn?: string;

  @Property({ type: 'string', nullable: true })
  title?: string = '';

  @Property({ type: 'text', nullable: true })
  perex?: string;

  @Property({ type: 'decimal', precision: 8, scale: 2, nullable: true })
  price?: string;

  @Property({ type: 'float', nullable: true })
  float?: number;

  @Property({ type: 'double', nullable: true })
  float36?: number;

  @Property({ type: 'double', nullable: true })
  double?: number;

  @Property({ length: -1, nullable: true })
  meta?: string;

  @ManyToOne({ entity: () => Author2 })
  author!: Author2;

  @ManyToOne({ entity: () => Publisher2, updateRule: 'cascade', deleteRule: 'cascade', nullable: true })
  publisher?: Publisher2;

  @ManyToMany({ entity: () => BookTag2, pivotTable: 'book_to_tag_unordered', joinColumn: 'book2_uuid_pk', inverseJoinColumn: 'book_tag2_id' })
  bookToTagUnordered = new Collection<BookTag2>(this);

}
",
  "import { Entity, ManyToOne, PrimaryKey, PrimaryKeyProp } from '@mikro-orm/core';
import { Book2 } from './Book2';
import { BookTag2 } from './BookTag2';

@Entity({ tableName: 'book2_tags' })
export class Book2Tags {

  [PrimaryKeyProp]?: 'order';

  @PrimaryKey()
  order!: number;

  @ManyToOne({ entity: () => Book2, updateRule: 'cascade', deleteRule: 'cascade' })
  book2!: Book2;

  @ManyToOne({ entity: () => BookTag2, updateRule: 'cascade', deleteRule: 'cascade' })
  bookTag2!: BookTag2;

}
",
  "import { Entity, ManyToOne, PrimaryKey, Property } from '@mikro-orm/core';
import { Car2 } from './Car2';

@Entity()
export class CarOwner2 {

  @PrimaryKey()
  id!: number;

  @Property()
  name!: string;

  @ManyToOne({ entity: () => Car2, updateRule: 'cascade', index: true })
  car!: Car2;

}
",
  "import { Entity, PrimaryKey, PrimaryKeyProp, Property } from '@mikro-orm/core';

@Entity()
export class Car2 {

  [PrimaryKeyProp]?: ['name', 'year'];

  @PrimaryKey({ length: 100, index: true })
  name!: string;

  @PrimaryKey({ index: true })
  year!: number;

  @Property()
  price!: number;

}
",
  "import { Entity, ManyToOne, PrimaryKey, PrimaryKeyProp, Property } from '@mikro-orm/core';
import { Test2 } from './Test2';

@Entity()
export class Configuration2 {

  [PrimaryKeyProp]?: ['property', 'test'];

  @PrimaryKey()
  property!: string;

  @ManyToOne({ entity: () => Test2, updateRule: 'cascade', primary: true })
  test!: Test2;

  @Property()
  value!: string;

}
",
  "import { Entity, PrimaryKey } from '@mikro-orm/core';

@Entity()
export class Dummy2 {

  @PrimaryKey()
  id!: number;

}
",
  "import { Entity, OneToOne, type Opt, PrimaryKey, Property, Unique } from '@mikro-orm/core';
import { FooBaz2 } from './FooBaz2';

@Entity()
export class FooBar2 {

  @PrimaryKey()
  id!: number;

  @Property()
  name!: string;

  @Unique({ name: 'foo_bar2_baz_id_unique', expression: 'create unique index [foo_bar2_baz_id_unique] on [foo_bar2] (where ([baz_id] IS NOT NULL))' })
  @OneToOne({ entity: () => FooBaz2, updateRule: 'cascade', deleteRule: 'set null', nullable: true })
  baz?: FooBaz2;

  @Unique({ name: 'foo_bar2_foo_bar_id_unique', expression: 'create unique index [foo_bar2_foo_bar_id_unique] on [foo_bar2] (where ([foo_bar_id] IS NOT NULL))' })
  @OneToOne({ entity: () => FooBar2, nullable: true })
  fooBar?: FooBar2;

  @Property({ type: 'datetime', length: 0, defaultRaw: \`current_timestamp\` })
  version!: Date & Opt;

  @Property({ length: -1, nullable: true })
  blob?: Buffer;

  @Property({ type: 'text', nullable: true })
  array?: string;

  @Property({ length: -1, nullable: true })
  object?: string;

}
",
  "import { Entity, type Opt, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class FooBaz2 {

  @PrimaryKey()
  id!: number;

  @Property()
  name!: string;

  @Property({ type: 'string', columnType: 'varchar(255)' })
  code!: string;

  @Property({ type: 'datetime', length: 3, defaultRaw: \`current_timestamp\` })
  version!: Date & Opt;

}
",
  "import { Entity, ManyToOne, PrimaryKeyProp, Property } from '@mikro-orm/core';
import { FooBar2 } from './FooBar2';
import { FooBaz2 } from './FooBaz2';

@Entity()
export class FooParam2 {

  [PrimaryKeyProp]?: ['bar', 'baz'];

  @ManyToOne({ entity: () => FooBar2, updateRule: 'cascade', primary: true })
  bar!: FooBar2;

  @ManyToOne({ entity: () => FooBaz2, primary: true })
  baz!: FooBaz2;

  @Property()
  value!: string;

}
",
  "import { Entity, Enum, type Opt, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class Publisher2 {

  @PrimaryKey()
  id!: number;

  @Property({ type: 'string' })
  name: string & Opt = 'asd';

  @Enum({ items: () => Publisher2Type })
  type: Publisher2Type & Opt = Publisher2Type.LOCAL;

  @Enum({ items: () => Publisher2Type2 })
  type2: Publisher2Type2 & Opt = Publisher2Type2.LOCAL;

  @Property({ type: 'tinyint', nullable: true })
  enum1?: number;

  @Property({ type: 'tinyint', nullable: true })
  enum2?: number;

  @Property({ type: 'tinyint', nullable: true })
  enum3?: number;

  @Enum({ items: () => Publisher2Enum4, nullable: true })
  enum4?: Publisher2Enum4;

}

export enum Publisher2Type {
  LOCAL = 'local',
  GLOBAL = 'global',
}

export enum Publisher2Type2 {
  LOCAL = 'LOCAL',
  GLOBAL = 'GLOBAL',
}

export enum Publisher2Enum4 {
  A = 'a',
  B = 'b',
  C = 'c',
}
",
  "import { Entity, ManyToOne, PrimaryKey } from '@mikro-orm/core';
import { Publisher2 } from './Publisher2';
import { Test2 } from './Test2';

@Entity({ tableName: 'publisher2_tests' })
export class Publisher2Tests {

  @PrimaryKey()
  id!: number;

  @ManyToOne({ entity: () => Publisher2, updateRule: 'cascade', deleteRule: 'cascade' })
  publisher2!: Publisher2;

  @ManyToOne({ entity: () => Test2, updateRule: 'cascade', deleteRule: 'cascade' })
  test2!: Test2;

}
",
  "import { Entity, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class Sandwich {

  @PrimaryKey()
  id!: number;

  @Property()
  name!: string;

  @Property()
  price!: number;

}
",
  "import { Entity, OneToOne, type Opt, PrimaryKey, Property, Unique } from '@mikro-orm/core';
import { Book2 } from './Book2';

@Entity()
export class Test2 {

  @PrimaryKey()
  id!: number;

  @Property({ nullable: true })
  name?: string;

  @Unique({ name: 'test2_book_uuid_pk_unique', expression: 'create unique index [test2_book_uuid_pk_unique] on [test2] (where ([book_uuid_pk] IS NOT NULL))' })
  @OneToOne({ entity: () => Book2, nullable: true })
  book?: Book2;

  @Property({ type: 'integer' })
  version: number & Opt = 1;

}
",
  "import { Collection, Entity, ManyToMany, OneToOne, PrimaryKey, PrimaryKeyProp, Property, Unique } from '@mikro-orm/core';
import { Car2 } from './Car2';
import { Sandwich } from './Sandwich';

@Entity()
@Unique({ name: 'user2_favourite_car_name_favourite_car_year_unique', expression: 'create unique index [user2_favourite_car_name_favourite_car_year_unique] on [user2] (where ([favourite_car_name] IS NOT NULL AND [favourite_car_year] IS NOT NULL))', properties: ['favouriteCarName'] })
export class User2 {

  [PrimaryKeyProp]?: ['firstName', 'lastName'];

  @PrimaryKey({ length: 100 })
  firstName!: string;

  @PrimaryKey({ length: 100 })
  lastName!: string;

  @Property({ nullable: true })
  foo?: number;

  @Unique({ name: 'user2_favourite_car_name_favourite_car_year_unique' })
  @OneToOne({ entity: () => Car2, updateRule: 'cascade', deleteRule: 'set null', nullable: true })
  favouriteCar?: Car2;

  @ManyToMany({ entity: () => Car2, joinColumns: ['user2_first_name', 'user2_last_name'], inverseJoinColumns: ['car2_name', 'car2_year'] })
  cars = new Collection<Car2>(this);

  @ManyToMany({ entity: () => Sandwich, joinColumns: ['user2_first_name', 'user2_last_name'], inverseJoinColumn: 'sandwich_id' })
  sandwiches = new Collection<Sandwich>(this);

}
",
]
`;

exports[`EntityGenerator generate entities from schema with forceUndefined = false [mssql]: mssql-entity-dump 1`] = `
[
  "import { Entity, OneToOne, PrimaryKeyProp, Property } from '@mikro-orm/core';
import { Author2 } from './Author2';

@Entity({ comment: 'This is address table' })
export class Address2 {

  [PrimaryKeyProp]?: 'author';

  @OneToOne({ entity: () => Author2, updateRule: 'cascade', deleteRule: 'cascade', primary: true })
  author!: Author2;

  @Property({ comment: 'This is address property' })
  value!: string;

}
",
  "import { Collection, Entity, Index, ManyToMany, ManyToOne, type Opt, PrimaryKey, Property, Unique } from '@mikro-orm/core';
import { Book2 } from './Book2';

@Entity()
@Index({ name: 'author2_name_age_index', properties: ['name', 'age'] })
@Unique({ name: 'author2_name_email_unique', properties: ['name', 'email'] })
export class Author2 {

  @PrimaryKey()
  id!: number;

  @Property({ type: 'datetime', length: 3, defaultRaw: \`current_timestamp\` })
  createdAt!: Date & Opt;

  @Property({ type: 'datetime', length: 3, defaultRaw: \`current_timestamp\` })
  updatedAt!: Date & Opt;

  @Property({ index: 'custom_idx_name_123' })
  name!: string;

  @Property({ index: 'custom_email_index_name', unique: 'custom_email_unique_name' })
  email!: string;

  @Property({ type: 'integer', nullable: true })
  age: number | null = null;

  @Property({ type: 'boolean', defaultRaw: \`0\`, index: true })
  termsAccepted: boolean & Opt = false;

  @Property({ type: 'boolean', nullable: true })
  optional: boolean | null = null;

  @Property({ type: 'text', nullable: true })
  identities: string | null = null;

  @Property({ type: 'date', nullable: true, index: true })
  born: string | null = null;

  @Property({ type: 'time', nullable: true, index: 'born_time_idx' })
  bornTime: string | null = null;

  @ManyToOne({ entity: () => Book2, deleteRule: 'cascade', nullable: true })
  favouriteBook: Book2 | null = null;

  @ManyToOne({ entity: () => Author2, nullable: true })
  favouriteAuthor: Author2 | null = null;

  @ManyToMany({ entity: () => Author2, pivotTable: 'author_to_friend', joinColumn: 'author2_1_id', inverseJoinColumn: 'author2_2_id' })
  authorToFriend = new Collection<Author2>(this);

  @ManyToMany({ entity: () => Author2, joinColumn: 'author2_1_id', inverseJoinColumn: 'author2_2_id' })
  following = new Collection<Author2>(this);

}
",
  "import { Entity, Enum, ManyToOne, OneToOne, PrimaryKey, Property, Unique } from '@mikro-orm/core';

@Entity()
export class BaseUser2 {

  @PrimaryKey()
  id!: number;

  @Property({ length: 100 })
  firstName!: string;

  @Property({ length: 100 })
  lastName!: string;

  @Enum({ items: () => BaseUser2Type, index: true })
  type!: BaseUser2Type;

  @Property({ type: 'string', nullable: true })
  ownerProp: string | null = null;

  @ManyToOne({ entity: () => BaseUser2, nullable: true })
  favouriteEmployee: BaseUser2 | null = null;

  @Unique({ name: 'base_user2_favourite_manager_id_unique', expression: 'create unique index [base_user2_favourite_manager_id_unique] on [base_user2] (where ([favourite_manager_id] IS NOT NULL))' })
  @OneToOne({ entity: () => BaseUser2, nullable: true })
  favouriteManager: BaseUser2 | null = null;

  @Property({ type: 'integer', nullable: true })
  employeeProp: number | null = null;

  @Property({ type: 'string', nullable: true })
  managerProp: string | null = null;

}

export enum BaseUser2Type {
  EMPLOYEE = 'employee',
  MANAGER = 'manager',
  OWNER = 'owner',
}
",
  "import { Entity, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class BookTag2 {

  @PrimaryKey()
  id!: bigint;

  @Property({ length: 50 })
  name!: string;

}
",
  "import { Collection, Entity, ManyToMany, ManyToOne, type Opt, PrimaryKey, PrimaryKeyProp, Property, Unique } from '@mikro-orm/core';
import { Author2 } from './Author2';
import { BookTag2 } from './BookTag2';
import { Publisher2 } from './Publisher2';

@Entity()
export class Book2 {

  [PrimaryKeyProp]?: 'uuidPk';

  @PrimaryKey({ type: 'uuid' })
  uuidPk!: string;

  @Property({ type: 'datetime', length: 3, defaultRaw: \`current_timestamp\` })
  createdAt!: Date & Opt;

  @Unique({ name: 'book2_isbn_unique', expression: 'create unique index [book2_isbn_unique] on [book2] (where ([isbn] IS NOT NULL))' })
  @Property({ type: 'character', length: 13, nullable: true })
  isbn: string | null = null;

  @Property({ type: 'string', nullable: true })
  title?: string | null = '';

  @Property({ type: 'text', nullable: true })
  perex: string | null = null;

  @Property({ type: 'decimal', precision: 8, scale: 2, nullable: true })
  price: string | null = null;

  @Property({ type: 'float', nullable: true })
  float: number | null = null;

  @Property({ type: 'double', nullable: true })
  float36: number | null = null;

  @Property({ type: 'double', nullable: true })
  double: number | null = null;

  @Property({ type: 'string', length: -1, nullable: true })
  meta: string | null = null;

  @ManyToOne({ entity: () => Author2 })
  author!: Author2;

  @ManyToOne({ entity: () => Publisher2, updateRule: 'cascade', deleteRule: 'cascade', nullable: true })
  publisher: Publisher2 | null = null;

  @ManyToMany({ entity: () => BookTag2, pivotTable: 'book_to_tag_unordered', joinColumn: 'book2_uuid_pk', inverseJoinColumn: 'book_tag2_id' })
  bookToTagUnordered = new Collection<BookTag2>(this);

}
",
  "import { Entity, ManyToOne, PrimaryKey, PrimaryKeyProp } from '@mikro-orm/core';
import { Book2 } from './Book2';
import { BookTag2 } from './BookTag2';

@Entity({ tableName: 'book2_tags' })
export class Book2Tags {

  [PrimaryKeyProp]?: 'order';

  @PrimaryKey()
  order!: number;

  @ManyToOne({ entity: () => Book2, updateRule: 'cascade', deleteRule: 'cascade' })
  book2!: Book2;

  @ManyToOne({ entity: () => BookTag2, updateRule: 'cascade', deleteRule: 'cascade' })
  bookTag2!: BookTag2;

}
",
  "import { Entity, ManyToOne, PrimaryKey, Property } from '@mikro-orm/core';
import { Car2 } from './Car2';

@Entity()
export class CarOwner2 {

  @PrimaryKey()
  id!: number;

  @Property()
  name!: string;

  @ManyToOne({ entity: () => Car2, updateRule: 'cascade', index: true })
  car!: Car2;

}
",
  "import { Entity, PrimaryKey, PrimaryKeyProp, Property } from '@mikro-orm/core';

@Entity()
export class Car2 {

  [PrimaryKeyProp]?: ['name', 'year'];

  @PrimaryKey({ length: 100, index: true })
  name!: string;

  @PrimaryKey({ index: true })
  year!: number;

  @Property()
  price!: number;

}
",
  "import { Entity, ManyToOne, PrimaryKey, PrimaryKeyProp, Property } from '@mikro-orm/core';
import { Test2 } from './Test2';

@Entity()
export class Configuration2 {

  [PrimaryKeyProp]?: ['property', 'test'];

  @PrimaryKey()
  property!: string;

  @ManyToOne({ entity: () => Test2, updateRule: 'cascade', primary: true })
  test!: Test2;

  @Property()
  value!: string;

}
",
  "import { Entity, PrimaryKey } from '@mikro-orm/core';

@Entity()
export class Dummy2 {

  @PrimaryKey()
  id!: number;

}
",
  "import { Entity, OneToOne, type Opt, PrimaryKey, Property, Unique } from '@mikro-orm/core';
import { FooBaz2 } from './FooBaz2';

@Entity()
export class FooBar2 {

  @PrimaryKey()
  id!: number;

  @Property()
  name!: string;

  @Unique({ name: 'foo_bar2_baz_id_unique', expression: 'create unique index [foo_bar2_baz_id_unique] on [foo_bar2] (where ([baz_id] IS NOT NULL))' })
  @OneToOne({ entity: () => FooBaz2, updateRule: 'cascade', deleteRule: 'set null', nullable: true })
  baz: FooBaz2 | null = null;

  @Unique({ name: 'foo_bar2_foo_bar_id_unique', expression: 'create unique index [foo_bar2_foo_bar_id_unique] on [foo_bar2] (where ([foo_bar_id] IS NOT NULL))' })
  @OneToOne({ entity: () => FooBar2, nullable: true })
  fooBar: FooBar2 | null = null;

  @Property({ type: 'datetime', length: 0, defaultRaw: \`current_timestamp\` })
  version!: Date & Opt;

  @Property({ type: 'blob', length: -1, nullable: true })
  blob: Buffer | null = null;

  @Property({ type: 'text', nullable: true })
  array: string | null = null;

  @Property({ type: 'string', length: -1, nullable: true })
  object: string | null = null;

}
",
  "import { Entity, type Opt, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class FooBaz2 {

  @PrimaryKey()
  id!: number;

  @Property()
  name!: string;

  @Property({ type: 'string', columnType: 'varchar(255)' })
  code!: string;

  @Property({ type: 'datetime', length: 3, defaultRaw: \`current_timestamp\` })
  version!: Date & Opt;

}
",
  "import { Entity, ManyToOne, PrimaryKeyProp, Property } from '@mikro-orm/core';
import { FooBar2 } from './FooBar2';
import { FooBaz2 } from './FooBaz2';

@Entity()
export class FooParam2 {

  [PrimaryKeyProp]?: ['bar', 'baz'];

  @ManyToOne({ entity: () => FooBar2, updateRule: 'cascade', primary: true })
  bar!: FooBar2;

  @ManyToOne({ entity: () => FooBaz2, primary: true })
  baz!: FooBaz2;

  @Property()
  value!: string;

}
",
  "import { Entity, Enum, type Opt, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class Publisher2 {

  @PrimaryKey()
  id!: number;

  @Property({ type: 'string' })
  name: string & Opt = 'asd';

  @Enum({ items: () => Publisher2Type })
  type: Publisher2Type & Opt = Publisher2Type.LOCAL;

  @Enum({ items: () => Publisher2Type2 })
  type2: Publisher2Type2 & Opt = Publisher2Type2.LOCAL;

  @Property({ type: 'tinyint', nullable: true })
  enum1: number | null = null;

  @Property({ type: 'tinyint', nullable: true })
  enum2: number | null = null;

  @Property({ type: 'tinyint', nullable: true })
  enum3: number | null = null;

  @Enum({ items: () => Publisher2Enum4, nullable: true })
  enum4: Publisher2Enum4 | null = null;

}

export enum Publisher2Type {
  LOCAL = 'local',
  GLOBAL = 'global',
}

export enum Publisher2Type2 {
  LOCAL = 'LOCAL',
  GLOBAL = 'GLOBAL',
}

export enum Publisher2Enum4 {
  A = 'a',
  B = 'b',
  C = 'c',
}
",
  "import { Entity, ManyToOne, PrimaryKey } from '@mikro-orm/core';
import { Publisher2 } from './Publisher2';
import { Test2 } from './Test2';

@Entity({ tableName: 'publisher2_tests' })
export class Publisher2Tests {

  @PrimaryKey()
  id!: number;

  @ManyToOne({ entity: () => Publisher2, updateRule: 'cascade', deleteRule: 'cascade' })
  publisher2!: Publisher2;

  @ManyToOne({ entity: () => Test2, updateRule: 'cascade', deleteRule: 'cascade' })
  test2!: Test2;

}
",
  "import { Entity, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class Sandwich {

  @PrimaryKey()
  id!: number;

  @Property()
  name!: string;

  @Property()
  price!: number;

}
",
  "import { Entity, OneToOne, type Opt, PrimaryKey, Property, Unique } from '@mikro-orm/core';
import { Book2 } from './Book2';

@Entity()
export class Test2 {

  @PrimaryKey()
  id!: number;

  @Property({ type: 'string', nullable: true })
  name: string | null = null;

  @Unique({ name: 'test2_book_uuid_pk_unique', expression: 'create unique index [test2_book_uuid_pk_unique] on [test2] (where ([book_uuid_pk] IS NOT NULL))' })
  @OneToOne({ entity: () => Book2, nullable: true })
  book: Book2 | null = null;

  @Property({ type: 'integer' })
  version: number & Opt = 1;

}
",
  "import { Collection, Entity, ManyToMany, OneToOne, PrimaryKey, PrimaryKeyProp, Property, Unique } from '@mikro-orm/core';
import { Car2 } from './Car2';
import { Sandwich } from './Sandwich';

@Entity()
@Unique({ name: 'user2_favourite_car_name_favourite_car_year_unique', expression: 'create unique index [user2_favourite_car_name_favourite_car_year_unique] on [user2] (where ([favourite_car_name] IS NOT NULL AND [favourite_car_year] IS NOT NULL))', properties: ['favouriteCarName'] })
export class User2 {

  [PrimaryKeyProp]?: ['firstName', 'lastName'];

  @PrimaryKey({ length: 100 })
  firstName!: string;

  @PrimaryKey({ length: 100 })
  lastName!: string;

  @Property({ type: 'integer', nullable: true })
  foo: number | null = null;

  @Unique({ name: 'user2_favourite_car_name_favourite_car_year_unique' })
  @OneToOne({ entity: () => Car2, updateRule: 'cascade', deleteRule: 'set null', nullable: true })
  favouriteCar!: Car2 | null;

  @ManyToMany({ entity: () => Car2, joinColumns: ['user2_first_name', 'user2_last_name'], inverseJoinColumns: ['car2_name', 'car2_year'] })
  cars = new Collection<Car2>(this);

  @ManyToMany({ entity: () => Sandwich, joinColumns: ['user2_first_name', 'user2_last_name'], inverseJoinColumn: 'sandwich_id' })
  sandwiches = new Collection<Sandwich>(this);

}
",
]
`;

exports[`EntityGenerator generate entities from schema with forceUndefined = true and undefinedDefaults = true [mssql]: mssql-entity-dump 1`] = `
[
  "import { Entity, OneToOne, PrimaryKeyProp, Property } from '@mikro-orm/core';
import { Author2 } from './Author2';

@Entity({ comment: 'This is address table' })
export class Address2 {

  [PrimaryKeyProp]?: 'author';

  @OneToOne({ entity: () => Author2, updateRule: 'cascade', deleteRule: 'cascade', primary: true })
  author!: Author2;

  @Property({ comment: 'This is address property' })
  value!: string;

}
",
  "import { Collection, Entity, Index, ManyToMany, ManyToOne, type Opt, PrimaryKey, Property, Unique } from '@mikro-orm/core';
import { Book2 } from './Book2';

@Entity()
@Index({ name: 'author2_name_age_index', properties: ['name', 'age'] })
@Unique({ name: 'author2_name_email_unique', properties: ['name', 'email'] })
export class Author2 {

  @PrimaryKey()
  id!: number;

  @Property({ type: 'datetime', length: 3, defaultRaw: \`current_timestamp\` })
  createdAt!: Date & Opt;

  @Property({ type: 'datetime', length: 3, defaultRaw: \`current_timestamp\` })
  updatedAt!: Date & Opt;

  @Property({ index: 'custom_idx_name_123' })
  name!: string;

  @Property({ index: 'custom_email_index_name', unique: 'custom_email_unique_name' })
  email!: string;

  @Property({ type: 'integer', nullable: true })
  age?: number | null;

  @Property({ type: 'boolean', defaultRaw: \`0\`, index: true })
  termsAccepted: boolean & Opt = false;

  @Property({ type: 'boolean', nullable: true })
  optional?: boolean | null;

  @Property({ type: 'text', nullable: true })
  identities?: string | null;

  @Property({ type: 'date', nullable: true, index: true })
  born?: string | null;

  @Property({ type: 'time', nullable: true, index: 'born_time_idx' })
  bornTime?: string | null;

  @ManyToOne({ entity: () => Book2, deleteRule: 'cascade', nullable: true })
  favouriteBook?: Book2 | null;

  @ManyToOne({ entity: () => Author2, nullable: true })
  favouriteAuthor?: Author2 | null;

  @ManyToMany({ entity: () => Author2, pivotTable: 'author_to_friend', joinColumn: 'author2_1_id', inverseJoinColumn: 'author2_2_id' })
  authorToFriend = new Collection<Author2>(this);

  @ManyToMany({ entity: () => Author2, joinColumn: 'author2_1_id', inverseJoinColumn: 'author2_2_id' })
  following = new Collection<Author2>(this);

}
",
  "import { Entity, Enum, ManyToOne, OneToOne, PrimaryKey, Property, Unique } from '@mikro-orm/core';

@Entity()
export class BaseUser2 {

  @PrimaryKey()
  id!: number;

  @Property({ length: 100 })
  firstName!: string;

  @Property({ length: 100 })
  lastName!: string;

  @Enum({ items: () => BaseUser2Type, index: true })
  type!: BaseUser2Type;

  @Property({ type: 'string', nullable: true })
  ownerProp?: string | null;

  @ManyToOne({ entity: () => BaseUser2, nullable: true })
  favouriteEmployee?: BaseUser2 | null;

  @Unique({ name: 'base_user2_favourite_manager_id_unique', expression: 'create unique index [base_user2_favourite_manager_id_unique] on [base_user2] (where ([favourite_manager_id] IS NOT NULL))' })
  @OneToOne({ entity: () => BaseUser2, nullable: true })
  favouriteManager?: BaseUser2 | null;

  @Property({ type: 'integer', nullable: true })
  employeeProp?: number | null;

  @Property({ type: 'string', nullable: true })
  managerProp?: string | null;

}

export enum BaseUser2Type {
  EMPLOYEE = 'employee',
  MANAGER = 'manager',
  OWNER = 'owner',
}
",
  "import { Entity, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class BookTag2 {

  @PrimaryKey()
  id!: bigint;

  @Property({ length: 50 })
  name!: string;

}
",
  "import { Collection, Entity, ManyToMany, ManyToOne, type Opt, PrimaryKey, PrimaryKeyProp, Property, Unique } from '@mikro-orm/core';
import { Author2 } from './Author2';
import { BookTag2 } from './BookTag2';
import { Publisher2 } from './Publisher2';

@Entity()
export class Book2 {

  [PrimaryKeyProp]?: 'uuidPk';

  @PrimaryKey({ type: 'uuid' })
  uuidPk!: string;

  @Property({ type: 'datetime', length: 3, defaultRaw: \`current_timestamp\` })
  createdAt!: Date & Opt;

  @Unique({ name: 'book2_isbn_unique', expression: 'create unique index [book2_isbn_unique] on [book2] (where ([isbn] IS NOT NULL))' })
  @Property({ type: 'character', length: 13, nullable: true })
  isbn?: string | null;

  @Property({ type: 'string', nullable: true })
  title?: string | null = '';

  @Property({ type: 'text', nullable: true })
  perex?: string | null;

  @Property({ type: 'decimal', precision: 8, scale: 2, nullable: true })
  price?: string | null;

  @Property({ type: 'float', nullable: true })
  float?: number | null;

  @Property({ type: 'double', nullable: true })
  float36?: number | null;

  @Property({ type: 'double', nullable: true })
  double?: number | null;

  @Property({ type: 'string', length: -1, nullable: true })
  meta?: string | null;

  @ManyToOne({ entity: () => Author2 })
  author!: Author2;

  @ManyToOne({ entity: () => Publisher2, updateRule: 'cascade', deleteRule: 'cascade', nullable: true })
  publisher?: Publisher2 | null;

  @ManyToMany({ entity: () => BookTag2, pivotTable: 'book_to_tag_unordered', joinColumn: 'book2_uuid_pk', inverseJoinColumn: 'book_tag2_id' })
  bookToTagUnordered = new Collection<BookTag2>(this);

}
",
  "import { Entity, ManyToOne, PrimaryKey, PrimaryKeyProp } from '@mikro-orm/core';
import { Book2 } from './Book2';
import { BookTag2 } from './BookTag2';

@Entity({ tableName: 'book2_tags' })
export class Book2Tags {

  [PrimaryKeyProp]?: 'order';

  @PrimaryKey()
  order!: number;

  @ManyToOne({ entity: () => Book2, updateRule: 'cascade', deleteRule: 'cascade' })
  book2!: Book2;

  @ManyToOne({ entity: () => BookTag2, updateRule: 'cascade', deleteRule: 'cascade' })
  bookTag2!: BookTag2;

}
",
  "import { Entity, ManyToOne, PrimaryKey, Property } from '@mikro-orm/core';
import { Car2 } from './Car2';

@Entity()
export class CarOwner2 {

  @PrimaryKey()
  id!: number;

  @Property()
  name!: string;

  @ManyToOne({ entity: () => Car2, updateRule: 'cascade', index: true })
  car!: Car2;

}
",
  "import { Entity, PrimaryKey, PrimaryKeyProp, Property } from '@mikro-orm/core';

@Entity()
export class Car2 {

  [PrimaryKeyProp]?: ['name', 'year'];

  @PrimaryKey({ length: 100, index: true })
  name!: string;

  @PrimaryKey({ index: true })
  year!: number;

  @Property()
  price!: number;

}
",
  "import { Entity, ManyToOne, PrimaryKey, PrimaryKeyProp, Property } from '@mikro-orm/core';
import { Test2 } from './Test2';

@Entity()
export class Configuration2 {

  [PrimaryKeyProp]?: ['property', 'test'];

  @PrimaryKey()
  property!: string;

  @ManyToOne({ entity: () => Test2, updateRule: 'cascade', primary: true })
  test!: Test2;

  @Property()
  value!: string;

}
",
  "import { Entity, PrimaryKey } from '@mikro-orm/core';

@Entity()
export class Dummy2 {

  @PrimaryKey()
  id!: number;

}
",
  "import { Entity, OneToOne, type Opt, PrimaryKey, Property, Unique } from '@mikro-orm/core';
import { FooBaz2 } from './FooBaz2';

@Entity()
export class FooBar2 {

  @PrimaryKey()
  id!: number;

  @Property()
  name!: string;

  @Unique({ name: 'foo_bar2_baz_id_unique', expression: 'create unique index [foo_bar2_baz_id_unique] on [foo_bar2] (where ([baz_id] IS NOT NULL))' })
  @OneToOne({ entity: () => FooBaz2, updateRule: 'cascade', deleteRule: 'set null', nullable: true })
  baz?: FooBaz2 | null;

  @Unique({ name: 'foo_bar2_foo_bar_id_unique', expression: 'create unique index [foo_bar2_foo_bar_id_unique] on [foo_bar2] (where ([foo_bar_id] IS NOT NULL))' })
  @OneToOne({ entity: () => FooBar2, nullable: true })
  fooBar?: FooBar2 | null;

  @Property({ type: 'datetime', length: 0, defaultRaw: \`current_timestamp\` })
  version!: Date & Opt;

  @Property({ type: 'blob', length: -1, nullable: true })
  blob?: Buffer | null;

  @Property({ type: 'text', nullable: true })
  array?: string | null;

  @Property({ type: 'string', length: -1, nullable: true })
  object?: string | null;

}
",
  "import { Entity, type Opt, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class FooBaz2 {

  @PrimaryKey()
  id!: number;

  @Property()
  name!: string;

  @Property({ type: 'string', columnType: 'varchar(255)' })
  code!: string;

  @Property({ type: 'datetime', length: 3, defaultRaw: \`current_timestamp\` })
  version!: Date & Opt;

}
",
  "import { Entity, ManyToOne, PrimaryKeyProp, Property } from '@mikro-orm/core';
import { FooBar2 } from './FooBar2';
import { FooBaz2 } from './FooBaz2';

@Entity()
export class FooParam2 {

  [PrimaryKeyProp]?: ['bar', 'baz'];

  @ManyToOne({ entity: () => FooBar2, updateRule: 'cascade', primary: true })
  bar!: FooBar2;

  @ManyToOne({ entity: () => FooBaz2, primary: true })
  baz!: FooBaz2;

  @Property()
  value!: string;

}
",
  "import { Entity, Enum, type Opt, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class Publisher2 {

  @PrimaryKey()
  id!: number;

  @Property({ type: 'string' })
  name: string & Opt = 'asd';

  @Enum({ items: () => Publisher2Type })
  type: Publisher2Type & Opt = Publisher2Type.LOCAL;

  @Enum({ items: () => Publisher2Type2 })
  type2: Publisher2Type2 & Opt = Publisher2Type2.LOCAL;

  @Property({ type: 'tinyint', nullable: true })
  enum1?: number | null;

  @Property({ type: 'tinyint', nullable: true })
  enum2?: number | null;

  @Property({ type: 'tinyint', nullable: true })
  enum3?: number | null;

  @Enum({ items: () => Publisher2Enum4, nullable: true })
  enum4?: Publisher2Enum4 | null;

}

export enum Publisher2Type {
  LOCAL = 'local',
  GLOBAL = 'global',
}

export enum Publisher2Type2 {
  LOCAL = 'LOCAL',
  GLOBAL = 'GLOBAL',
}

export enum Publisher2Enum4 {
  A = 'a',
  B = 'b',
  C = 'c',
}
",
  "import { Entity, ManyToOne, PrimaryKey } from '@mikro-orm/core';
import { Publisher2 } from './Publisher2';
import { Test2 } from './Test2';

@Entity({ tableName: 'publisher2_tests' })
export class Publisher2Tests {

  @PrimaryKey()
  id!: number;

  @ManyToOne({ entity: () => Publisher2, updateRule: 'cascade', deleteRule: 'cascade' })
  publisher2!: Publisher2;

  @ManyToOne({ entity: () => Test2, updateRule: 'cascade', deleteRule: 'cascade' })
  test2!: Test2;

}
",
  "import { Entity, PrimaryKey, Property } from '@mikro-orm/core';

@Entity()
export class Sandwich {

  @PrimaryKey()
  id!: number;

  @Property()
  name!: string;

  @Property()
  price!: number;

}
",
  "import { Entity, OneToOne, type Opt, PrimaryKey, Property, Unique } from '@mikro-orm/core';
import { Book2 } from './Book2';

@Entity()
export class Test2 {

  @PrimaryKey()
  id!: number;

  @Property({ type: 'string', nullable: true })
  name?: string | null;

  @Unique({ name: 'test2_book_uuid_pk_unique', expression: 'create unique index [test2_book_uuid_pk_unique] on [test2] (where ([book_uuid_pk] IS NOT NULL))' })
  @OneToOne({ entity: () => Book2, nullable: true })
  book?: Book2 | null;

  @Property({ type: 'integer' })
  version: number & Opt = 1;

}
",
  "import { Collection, Entity, ManyToMany, OneToOne, PrimaryKey, PrimaryKeyProp, Property, Unique } from '@mikro-orm/core';
import { Car2 } from './Car2';
import { Sandwich } from './Sandwich';

@Entity()
@Unique({ name: 'user2_favourite_car_name_favourite_car_year_unique', expression: 'create unique index [user2_favourite_car_name_favourite_car_year_unique] on [user2] (where ([favourite_car_name] IS NOT NULL AND [favourite_car_year] IS NOT NULL))', properties: ['favouriteCarName'] })
export class User2 {

  [PrimaryKeyProp]?: ['firstName', 'lastName'];

  @PrimaryKey({ length: 100 })
  firstName!: string;

  @PrimaryKey({ length: 100 })
  lastName!: string;

  @Property({ type: 'integer', nullable: true })
  foo?: number | null;

  @Unique({ name: 'user2_favourite_car_name_favourite_car_year_unique' })
  @OneToOne({ entity: () => Car2, updateRule: 'cascade', deleteRule: 'set null', nullable: true })
  favouriteCar!: Car2 | null;

  @ManyToMany({ entity: () => Car2, joinColumns: ['user2_first_name', 'user2_last_name'], inverseJoinColumns: ['car2_name', 'car2_year'] })
  cars = new Collection<Car2>(this);

  @ManyToMany({ entity: () => Sandwich, joinColumns: ['user2_first_name', 'user2_last_name'], inverseJoinColumn: 'sandwich_id' })
  sandwiches = new Collection<Sandwich>(this);

}
",
]
`;
